# empress-of-japan-capstone

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json
.github/: dependabot.yml
.github/workflows/: apply.yml  codeql.yml  deploy-backend.yml  deploy-frontend.yml  gitleaks.yml  migrate-backend.yml  plan.yml  terraform-security.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.py  external_sources.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_agent_sessions.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py  observability.py  retrieval.py  session_memory.py  telemetry.py  voice.py
backend/app/agents/: __init__.py  graph.py  llm.py  personas.py  scenes.py  state.py
backend/app/ingest/: __init__.py  __main__.py  chunk.py  classified.py  embed.py  mappings.py  normalize.py  parse.py  pipeline.py  privacy.py  records.py  sources.py  upsert.py
backend/app/jobs/: __init__.py  payloads.py  sqs.py  worker.py
backend/app/tracing/: __init__.py  sqs.py
backend/db/: schema.sql
backend/tests/: test_agents.py  test_config.py  test_health.py  test_ingest_integration.py  test_ingest_unit.py  test_jobs.py  test_observability.py  test_retrieval.py  test_session_memory.py  test_session_memory_integration.py  test_voice.py
data/: audit-notes.md  ingest-pipeline.md  schema.md
dev-log/: TEMPLATE.md
dev-log/kelly/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md
dev-log/qingman/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md  week-07.md  week-08.md
dev-log/steven/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-06.md
dev-log/yaoyi/: week-01.md  week-02.md  week-03.md  week-04.md  (+3 more)
docs/: architecture.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
infra/: README.md  bootstrap.sh
(+69 files in other folders)
